--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   chat_gpt_sdk: ^2.2.0
+  provider: ^6.0.5
+  flutter_typeahead: ^4.6.1
+  http: ^1.0.0
+  latlong2: ^0.9.0
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
