--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^1.0.0
   latlong2: ^0.9.0
   uuid: ^3.0.7
+  loading_animation_widget: ^1.2.0+4
 
 dev_dependencies:
   flutter_test:
